--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,12 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
-      - run: |
-          docker build -t ghcr.io/rachmandev/karsajobs:latest .
+      - run: 
+          name: Build Docker Image
+          command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
   lint:
     docker:
-      - image: golangci/golangci-lint:v1.37-alpine
+      - image: golangci/golangci-lint:latest-alpine
     steps:
       - checkout
       - run: golangci-lint run
