--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
           command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
       - run:
           name: Login to Github Packages
-          command: docker login ghcr.io --username rachmandev --password $GITHUB_TOKEN
+          command: docker login ghcr.io --username rachmandev --password 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
       - run:
           name: Push Image to Github Packages
           command: docker push ghcr.io/rachmandev/karsajobs:latest
   lint-docker:
     docker:
-      - image: golangci/golangci-lint:latest-alpine
+      - image: golangci/golangci-lint:v1.15
     steps:
       - checkout
       - run: 
@@ -29,7 +29,7 @@ jobs:
   test-app:
     working_directory: ~/go/src/github.com/dicodingacademy/karsajobs
     docker:
-      - image: golang:1.21-alpine
+      - image: golang:1.15-alpine
     steps:
       - checkout
       - run: go test -v -short --count=1 $(go list ./...)
