--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
       - run:
           name: Login to Github Packages
-          command: docker login ghcr.io --username rachmandev --password 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
+          command: echo "$GITHUB_TOKEN" | docker login ghcr.io --username rachmandev --password-stdin
       - run:
           name: Push Image to Github Packages
           command: docker push ghcr.io/rachmandev/karsajobs:latest
