--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,9 @@ jobs:
       - run: 
           name: Build Docker Image
           command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
-      - run: export GITHUB_TOKEN=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
       - run:
           name: Login to Github Packages
-          command: echo "$GITHUB_TOKEN" | docker login ghcr.io --username rachmandev --password-stdin
+          command: docker login ghcr.io --username rachmandev --password-stdin
       - run:
           name: Push Image to Github Packages
           command: docker push ghcr.io/rachmandev/karsajobs:latest
@@ -26,11 +25,11 @@ jobs:
       - checkout
       - run: 
           name: Run the Linter
-          command: golangci-lint
+          command: golangci-lint -v run
   test-app:
     working_directory: /go/src/github.com/dicodingacademy/karsajobs
     docker:
-      - image: golang:1.15-alpine
+      - image: golang:1.15
     steps:
       - checkout
       - run: go test -v -short --count=1 $(go list ./...)
