--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
       - run:
           name: Login to Github Packages
-          command: docker login ghcr.io --username rachmandev --password-stdin
+          command: docker login ghcr.io --username rachmandev --password=input("Enter your password:")
       - run:
           name: Push Image to Github Packages
           command: docker push ghcr.io/rachmandev/karsajobs:latest
