--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: docker build -t ghcr.io/rachmandev/karsajobs:latest .
       - run:
           name: Login to Github
-          command: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+          command: docker login -u rachmandev -p dckr_pat_5SR7jWwo1rkBFWPQWjJ7Uij1nNM
       - run:
           name: Push Image to Github Packages
           command: docker push ghcr.io/rachmandev/karsajobs:latest
