--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build-app-karsajobs:
     working_directory: ~/go/src/github.com/dicodingacademy/karsajobs
     docker:
-      - image: cimg/go:1.15.1
+      - image: golang:1.15-alpine
     steps:
       - checkout
       - setup_remote_docker:
@@ -25,7 +25,7 @@ jobs:
       - checkout
       - run: 
           name: Run the Linter
-          command: golangci-lint -v run
+          command: golangci-lint run
   test-app:
     working_directory: /go/src/github.com/dicodingacademy/karsajobs
     docker:
