--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,7 @@
 version: 2.1
 orbs:
   linter: reactioncommerce/linter@0.0.1
-executors:
-      hadolint_executor:
-        parameters:
-          tag:
-            type: string
-            default: "v1.6.6-6-g254b4ff"
-          docker:
-            - image: hadolint/hadolint:v2.12.0
+      
 jobs:
   build-app-karsajobs:
     working_directory: ~/app
@@ -29,7 +22,14 @@ jobs:
           name: Push Image to Github Packages
           command: docker push rachmandev/karsajobs-ui:latest
   dockerfile_lint:
-    executor: hadolint_executor
+    executor:
+      hadolint_executor:
+          parameters:
+            tag:
+              type: string
+              default: "v1.6.6-6-g254b4ff"
+            docker:
+              - image: hadolint/hadolint:v2.12.0
     steps:
       - run_dockerfile_lint
       - checkout
