--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: cschleiden/actions-linter@v1
       - name: Build Image
         run: docker build -t ghcr.io/rachmandev/karsajobs-ui:latest .
       - name: Login to Github
