--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -4,11 +4,10 @@ on:
   push
 
 jobs:
-  build_publish_and_lint:
+  build_and_publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: cschleiden/actions-linter@v1
       - name: Build Image
         run: docker build -t ghcr.io/rachmandev/karsajobs-ui:latest .
       - name: Login to Github
